# lambda-sc-virt-notifier

./: .cgiignore  .gitignore  Makefile  README.md  app.py  manifest.json  order_page_example.html  pyproject.toml  requirements.txt
