[tool.poetry]
name = "lambda-sc-virt-notifier"
version = "0.1.0"
description = "Lambda function which periodically polls sc-virt order status and notifies about any changes"
authors = ["Ivan Elfimov <ielfimov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
